--- a/files/styleSheet.css
+++ b/files/styleSheet.css
@@ -82,3 +82,24 @@ html {
 	}
 }
 
+/* HEADER STUFF */
+
+	#headerSpacer{height:90px;width:100%;margin:0;background:black;}
+	  #headerBar{	position:fixed;margin:0;top:0;left:0;right:0; height:90px;
+		     	background:rgba(0,0,0,0.8);
+			border-bottom: 5px solid white;
+		     	z-index:999;
+		     	box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2); 
+		    }
+	  #headerLogo{
+		  float:left; margin:5px;
+		  height:80px; width:auto;
+		  cursor:pointer;
+		  transition:0.6s;
+	  }
+	  #headerLogo:hover{
+		  scale:1.04;
+	  }
+	  #headerBar a {float:right;margin:5px; height:80px; background:none; color:white; font-size:20px; transition:0.6s; padding:14px; padding-top:28px; text-decoration:none;}
+	  #headerBar a:hover {text-decoration:underline; color:blue;}
+
