--- a/files/styleSheet.css
+++ b/files/styleSheet.css
@@ -103,3 +103,5 @@ html {
 	  #headerBar a {float:right;margin:5px; height:80px; background:none; color:white; font-size:20px; transition:0.6s; padding:14px; padding-top:28px; text-decoration:none;}
 	  #headerBar a:hover {text-decoration:underline; color:blue;}
 
+	#headerBox{margin:0;padding:0; max-width:1200px;background:none;}
+
