--- a/files/styleSheet.css
+++ b/files/styleSheet.css
@@ -4,10 +4,12 @@ html {
 }
 
  body{
-      background-image: url("https://images.unsplash.com/photo-1557683316-973673baf926?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z3JhZGllbnQlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fHww&w=1000&q=80");
+
+      background-image: url("https://reuvenrey.github.io/me/files/images/websiteBackground.jfif");
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
+
       color:white;
       font-size:15px;
       line-height:25px;
@@ -36,6 +38,8 @@ html {
 }
 
 .fullContainer {
+ background:white;
+ color:black;
   width:full;
   margin:0;
   padding:12px;
