--- a/files/styleSheet.css
+++ b/files/styleSheet.css
@@ -18,47 +18,61 @@ html {
       margin:0;
     }
     
-    .columnContainer{display:flex; flex-flow:row; margin:auto; margin-top:40px; width:100%; max-width:1200px;}
-    .columnContainer img{width:28%; margin:1%; scale:1; border-radius:10px; align-self:stretch; object-fit:cover;}
-    .columnContainer div{width:68%; padding:0; margin:2%; align-self:stretch;}
-
+    
     .navBar a {display:inline-block; margin:15px; font-size:18px; font-weight:bold; line-height:30px; color:black; text-decoration:none;}
     .navBar a:hover{color:gray;}
 
-    a {color:white; cursor:pointer;}
+    a {color:white; cursor:pointer; text-decoration:underline;}
 
-.container {
-  margin:auto;
-  margin-top:20px;
-  margin-bottom:20px;
-  padding:12px;
-  
-  width:100%;
-  max-width:1200px;
-}
+/* -- CONTAINERS -- */
 
-.fullContainer {
- background:white;
- color:black;
-  width:full;
-  margin:0;
-  padding:12px;
-  margin-top:20px;
-  margin-bottom:20px;
-}
+	.container {
+	  margin:auto;
+	  margin-top:20px;
+	  margin-bottom:20px;
+	  padding:12px;
+	  
+	  width:100%;
+	  max-width:1200px;
+	}
 
-.portholeContainer {
-	display:flex; flex-flow:row; flex-wrap:wrap;
-	align-items:flex-start; justify-content:center;
-}
-.portholeContainer div{width:250px; margin:0; padding:20px; align-self:stretch; text-align:center;}
-.portholeContainer div img{width:210px; height:210px; border-radius:50%; object-fit:cover; transition:0.5s;}
-.portholeContainer div h4{margin-top:5px;}
-.portholeContainer div:hover img{scale:1.05; border-radius:45%;}
+	.columnContainer{display:flex; flex-flow:row; margin:auto; margin-top:40px; width:100%; max-width:1200px;}
+    	.columnContainer img{width:28%; margin:1%; scale:1; border-radius:10px; align-self:stretch; object-fit:cover;}
+    	.columnContainer div{width:70%; padding:0; margin:0; align-self:stretch;}
+
+	
+	.fullContainer {
+	 background:white;
+	 color:black;
+	  width:full;
+	  margin:0;
+	  padding:12px;
+	  margin-top:20px;
+	  margin-bottom:20px;
+	}
+
+	.portholeContainer {
+		display:flex; flex-flow:row; flex-wrap:wrap;
+		align-items:flex-start; justify-content:center;
+	}
+	.portholeContainer div{width:250px; margin:0; padding:20px; align-self:stretch; text-align:center;}
+	.portholeContainer div img{width:210px; height:210px; border-radius:50%; object-fit:cover; transition:0.5s;}
+	.portholeContainer div h4{margin-top:5px;}
+	.portholeContainer div:hover img{scale:1.05; border-radius:45%;}
 
 
+/* -- UI ELEMENTS AND DECORATION -- */
 
+ 	.spacer{width:95%; max-width:1100px; margin:auto; height:1px; background:#efefef; margin-top:15px; margin-bottom:15px;}
 
+	.titleBar{width:100%; margin:0; background:white; color:black; padding:12px; text-align:left; padding-top:20px; padding-bottom:20px;}
+	.titleBar p,subtitleBar p{max-width:1200px; margin:auto;}
+
+	.subtitleBar{width:100%; margin:0; background:#efefef; color:black; padding:12px; text-align:left;}
+
+/* -- TITLES AND UI TEXT ELEMENTS -- */
+
+	
 
 #loader{
 	position:fixed;
@@ -88,29 +102,30 @@ html {
 
 /* HEADER STUFF */
 
-	#headerSpacer{height:90px;width:100%;margin:0;background:black;}
-	  #headerBar{	position:fixed;margin:0;top:0;left:0;right:0; height:90px;
+		#headerSpacer{height:90px;width:100%;margin:0;background:black;}
+	  	#headerBar{	position:fixed;margin:0;top:0;left:0;right:0; height:90px;
 		     	background:rgba(0,0,0,0.8);
 			border-bottom: 5px solid white;
 		     	z-index:999;
 		     	box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2); 
 		    }
-	  #headerLogo{
+	  	#headerLogo{
 		  float:left; margin:5px;
 		  height:80px; width:auto;
 		  cursor:pointer;
 		  transition:0.6s;
-	  }
-	  #headerLogo:hover{
+	 	}
+	  	#headerLogo:hover{
 		  scale:1.04;
-	  }
-	  #headerBar a {float:right;margin:5px; height:80px; background:none; color:white; font-size:20px; transition:0.6s; padding:14px; padding-top:28px; text-decoration:none;}
-	  #headerBar a:hover {text-decoration:underline; color:blue;}
+	  	}
+	  	#headerBar a {float:right;margin:5px; height:80px; background:none; color:white; font-size:20px; transition:0.6s; padding:14px; padding-top:28px; text-decoration:none;}
+	  	#headerBar a:hover {text-decoration:underline; color:blue;}
 
-	#headerBox{	padding:0; max-width:1200px; background:none;
+		#headerBox{	padding:0; max-width:1200px; background:none;
 
 		 	margin:auto; margin-top:0; margin-bottom:0;
-		  }
+		}
+
 
 .fadeIn{animation: 0.5s fade_in;}
 @keyframes fade_in{
