--- a/files/styleSheet.css
+++ b/files/styleSheet.css
@@ -69,7 +69,7 @@ html {
  	.spacer{width:95%; max-width:1100px; margin:auto; height:1px; background:#efefef; margin-top:15px; margin-bottom:15px;}
 
 	.titleBar{width:100%; margin:0; background:white; color:black; padding:12px; text-align:left; padding-top:20px; padding-bottom:20px;}
-	.titleBar p,subtitleBar p{max-width:1200px; margin:auto;}
+	.titleBar p, .subtitleBar p{max-width:1200px; margin:auto;}
 
 	.subtitleBar{width:100%; margin:0; background:#efefef; color:black; padding:12px; text-align:left;}
 
