--- a/files/styleSheet.css
+++ b/files/styleSheet.css
@@ -22,7 +22,7 @@ html {
     .navBar a {display:inline-block; margin:15px; font-size:18px; font-weight:bold; line-height:30px; color:black; text-decoration:none;}
     .navBar a:hover{color:gray;}
 
-    a {color:white; cursor:pointer; text-decoration:underline;}
+    a {color:inherit; cursor:pointer; text-decoration:underline;}
 
 /* -- CONTAINERS -- */
 
