--- a/files/styleSheet.css
+++ b/files/styleSheet.css
@@ -76,9 +76,9 @@ html {
 	.banner{width:100%; margin:0; padding:0; height:60vh;}
 	.banner img{width:100%;  height:100%; object-fit:cover; margin:0;}
 
-	.columnContainer div div{width:initial;}
+	.columnContainer div div{width:initial; padding:initial;}
 	.skillContainer{margin:10px; width:100%; padding-left:-5px;}
-	.skillContainer div{display:inline-block; background:rgba(230,230,230,0.30); color:white; border:none; border-radius:20px; margin:5px; padding:5px; padding-left:10px; padding-right:10px;}
+	.skillContainer a{display:inline-block; margin:5px; padding:5px 10px 5px 10px; background:rgba(230,230,230,0.30); border-radius:20px; color:white; text-decoration:none; cursor:default;}
 
 /* -- TITLES AND UI TEXT ELEMENTS -- */
 
